--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,14 @@ asgiref==3.3.1
 Django==3.1.7
 djangorestframework==3.12.4
 djutil==0.2
+joblib==1.0.1
+numpy==1.20.2
+pandas==1.2.3
+python-dateutil==2.8.1
 pytz==2021.1
+scikit-learn==0.24.1
+scipy==1.6.2
+six==1.15.0
+sklearn==0.0
 sqlparse==0.4.1
+threadpoolctl==2.1.0
