--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ pytz==2021.1
 regex==2021.3.17
 requests==2.25.1
 sacremoses==0.0.44
-scikit-learn==0.24.1
+scikit-learn
 scipy==1.6.2
 sentence-transformers==1.0.4
 sentencepiece==0.1.95
