--- a/requirements.txt
+++ b/requirements.txt
@@ -11,17 +11,17 @@ idna==2.10
 importlib-metadata==3.10.0
 joblib==1.0.1
 nltk==3.5
-numpy
+numpy==1.20.2
 packaging==20.9
-pandas
+pandas==1.2.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 regex==2021.3.17
 requests==2.25.1
 sacremoses==0.0.44
-scikit-learn
-scipy
+scikit-learn==0.24.1
+scipy==1.6.2
 sentence-transformers==1.0.4
 sentencepiece==0.1.95
 six==1.15.0
